[package]
name = "organizer"
version = "0.1.1"
edition = "2024"
authors = ["AntoniaTurcatto <antoniaturcatto29@gmail.com>"]
description = "A crate to organize a given folder based on given filters."
license = "MIT OR Apache-2.0"
repository = "https://github.com/AntoniaTurcatto/organizer"
documentation = "https://docs.rs/organizer"

[dependencies]
chrono = "0.4.44"
clap = {version = "4.5.59", features = ["cargo"]}
